# Pool-Game-Tracking

./: .gitignore  CMakeLists.txt  readme.md
include/: Ball.h  BallClassifier.h  BallDetector.h  BallTracker.h  BallsDetection.h  Draw.h  EvaluationMetrics.h  FieldGeometryAndMask.h  FilesystemUtils.h  TableSegmenter.h  myTracking.h  utils.h
results/: readme.md
results/game1_clip1/: metrics.txt
results/game1_clip1/bounding_boxes/: frame_first_bbox.txt  frame_last_bbox.txt
results/game1_clip2/: metrics.txt
results/game1_clip2/bounding_boxes/: frame_first_bbox.txt  frame_last_bbox.txt
results/game1_clip3/: metrics.txt
results/game1_clip3/bounding_boxes/: frame_first_bbox.txt  frame_last_bbox.txt
results/game1_clip4/: metrics.txt
results/game1_clip4/bounding_boxes/: frame_first_bbox.txt  frame_last_bbox.txt
results/game2_clip1/: metrics.txt
results/game2_clip1/bounding_boxes/: frame_first_bbox.txt  frame_last_bbox.txt
results/game2_clip2/: metrics.txt
results/game2_clip2/bounding_boxes/: frame_first_bbox.txt  frame_last_bbox.txt
results/game3_clip1/: metrics.txt
results/game3_clip1/bounding_boxes/: frame_first_bbox.txt  frame_last_bbox.txt
results/game3_clip2/: metrics.txt
results/game3_clip2/bounding_boxes/: frame_first_bbox.txt  frame_last_bbox.txt
results/game4_clip1/: metrics.txt
results/game4_clip1/bounding_boxes/: frame_first_bbox.txt  frame_last_bbox.txt
results/game4_clip2/: metrics.txt
results/game4_clip2/bounding_boxes/: frame_first_bbox.txt  frame_last_bbox.txt
src/: Ball.cpp  BallClassifier.cpp  BallDetector.cpp  BallTracker.cpp  BallsDetection.cpp  Draw.cpp  EvaluationMetrics.cpp  FieldGeometryAndMask.cpp  FilesystemUtils.cpp  TableSegmenter.cpp  draw-class.cpp  esempio tracciamento palline.cpp  evaluation-runner.cpp  main.cpp  mask campo e palline _ bounding box palline.cpp  mask_campo_e_palline_bounding_box_palline.cpp  myTracking.cpp  open-mask.cpp  run-evaluation.cpp  run-live.cpp  testClassification.cpp  testTracker copy.cpp  testTracker.cpp  testTrackerC.cpp  utils.cpp
